@@ -1,0 +1,41 @@
+<?php
+/*
+ * This file is part of TSNF Vaktliste.
+ *
+ * TSNF Vaktliste is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * TSNF Vaktliste is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with TSNF Vaktliste. If not, see <https://www.gnu.org/licenses/>.
+ *
+ */
+session_start();
+
+// Unset all of the session variables
+$_SESSION = array();
+
+// If it's desired to kill the session, also delete the session cookie.
+if (ini_get("session.use_cookies")) {
+    $params = session_get_cookie_params();
+    setcookie(session_name(), '', time() - 42000,
+        $params["path"], $params["domain"],
+        $params["secure"], $params["httponly"]
+    );
+}
+// Delete the token cookie
+if (isset($_COOKIE['login_token'])) {
+    setcookie('login_token', '', time() - 42000, '/');
+}
+// Finally, destroy the session.
+session_destroy();
+
+// Redirect to login page
+header("Location: index.php");
+exit();
